--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                <div class="columns download">
                      <h2>Resume download links</h2>
                   <p>
-                     <a href="Website\Arbi-A4.pdf" class="button" target="_blank" ><i class="fa fa-download"></i>A4</a>
-                     <a href="Website\Arbi-Letter.pdf" class="button" target="_blank" ><i class="fa fa-download"></i>Letter</a>
+                     <a href="Website\ArbiDaci_Resume_A4Size.pdf" class="button" target="_blank" ><i class="fa fa-download"></i>A4</a>
+                     <a href="Website\ArbiDaci_resume_LetterSize.pdf" class="button" target="_blank" ><i class="fa fa-download"></i>Letter</a>
                   </p>
                </div>
 
