--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                <div class="columns download">
                      <h2>Resume download links</h2>
                   <p>
-                     <a href="Website\ArbiDaci_Resume.pdf" class="button" target="_blank" ><i class="fa fa-download"></i>A4</a>
+                     <a href="Website\ArbiDaci_Resume.pdf" class="button" target="_blank" ><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
