--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 
                </div>
                <div class="columns download">
-                     <h2>Resume download links</h2>
+                     <h2>Resume Download Link</h2>
                   <p>
-                     <a href="Website\ArbiDaci_Resume.pdf" class="button" target="_blank" ><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="Website\ArbiDaci_Resume.pdf" class="button" target="_blank" ><i class="fa fa-download"></i>Resume</a>
                   </p>
                </div>
 
