--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                <div class="columns download">
                      <h2>Resume Download Link</h2>
                   <p>
-                     <a href="Website\ArbiDaci Resume.pdf" class="button" target="_blank" ><i class="fa fa-download"></i>Resume</a>
+                     <a href="Resume\ArbiDaci Resume.pdf" class="button" target="_blank" ><i class="fa fa-download"></i>Resume</a>
                   </p>
                </div>
 
