updated contact section and projects redirect

--- a/index.html
+++ b/index.html
@@ -102,9 +102,10 @@
                   <h2>Contact Gallery</h2>
                   <p class="address">
 						   <span>Arbi Daci</span><br>
-						   <span>Toronto, Ontario<br>
-						   <span>(647) 710-1614</span><br>
-					   </p>
+						   <a href="https://goo.gl/maps/w7ETftZ8a9VkKH5P6"> Toronto, Ontario</a><br>
+                     <a href="tel:+6477101614">(647) 710-1614</a><br>
+                     <a href="mailto:arbidaci@gmail.com">arbidaci@gmail.com</a>
+                  </p>
 
                </div>
                <div class="columns download">
@@ -169,7 +170,22 @@
 
                   </div>
           		</div> <!-- item end -->
+                <div class="columns portfolio-item">
+                  <div class="item-wrap">
 
+                     <a href="../google-homepage/" title="">
+                        <img alt="" src="images/google-homepage.png">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+          					      <h5>Projects</h5>
+                              <!-- <p>Photography</p> -->
+          					   </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
+          		</div> 
             </div> <!-- portfolio-wrapper end -->
 
          </div> <!-- twelve columns end -->
@@ -215,6 +231,23 @@
 
 	      </div><!-- modal-02 End -->
 
+         <!-- <div id="modal-03" class="popup-modal mfp-hide">
+
+		      <img class="scale-with-grid" src="https://i.imgur.com/GPd3TW4.png" alt="" />
+
+		      <div class="description-box">
+                  <h4>Under construction</h4>
+                  <p>This will soon be a lightbox modal with a timebelt underneath to easily pick from images. <br> 
+                     So in the meantime, check out my vsco by clicking <b>gallery</b> below (hopefully I've uploaded something)
+                     </p>
+               </div> 
+
+            <div class="link-box">
+               <a href="http://vsco.com/draszi">Gallery</a>
+		         <a class="popup-modal-dismiss">Close</a>
+            </div> -->
+
+	      </div><!-- modal-02 End -->
 
       </div> <!-- row End -->
 
