--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <div class="columns portfolio-item">
                   <div class="item-wrap">
 
-                     <a href="../google-homepage/" title="">
+                     <a href="/google-homepage/" title="">
                         <img alt="" src="images/google-homepage.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
