--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 <div class="project-column">
                     <h2 class="section-title">projects</h2>
                     <div class="project-list" id="dev-projects">
-                        <a href="https://www.arbidaci.com" class="project-card">
+                        <a href="/website2" class="project-card">
                             <div class="project-card">
                                 <span>P</span>
                                 <div>Portfolio 1.0</div>
                             </div>
                         </a>
-                        <a href="https://www.arbidaci.com/google-homepage/" class="project-card">
+                        <a href="/google-homepage" class="project-card">
                             <div class="project-card">
                                 <span>G</span>
                                 <div>Google Replica</div>
